# rust-api-edgedb

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.db  README.md  api-requests.http  docker-compose.yml
.cargo/: config.toml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql
src/: main.rs
src/api/: mod.rs  root.rs  router.rs  users.rs
src/db/: edgedb_user_store.rs  mod.rs
src/models/: user.rs
