[package]
name = "rust-api-edgedb"
version = "0.1.0"
edition = "2021"
authors = ["Mikko Leppänen <mleppan23@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["json"] }
color-eyre = "0.6.2"
dotenvy = "0.15.7"
edgedb-derive = "0.5.1"
edgedb-protocol = "0.6.0"
edgedb-tokio = "0.5.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.3", features = ["add-extension", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v8", "serde"] }
